# docs

./: .gitignore  .pre-commit-config.yaml  404.html  CNAME  Justfile  README.md  funding.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: funding.json
.github/workflows/: docs.yml
.well-known/: funding-manifest-urls
LICENSE/: index.html
become-a-contributor/: index.html
code-of-conduct/: index.html
decisions/: README.md  index.html
decisions/0001-draw-io/: index.html
decisions/0002-mkdocs/: index.html
decisions/0003-react/: index.html
decisions/0004-python/: index.html
decisions/0005-github/: index.html
decisions/0006-slack/: index.html
decisions/0007-pnpm/: index.html
decisions/0008-uv/: index.html
decisions/0009-load-testing/: index.html
decisions/0010-k8s-domain/: index.html
decisions/0011-sso-auth/: index.html
dev-guide/accessibility/: index.html
dev-guide/api-doc-gen/: index.html
dev-guide/building-mobile-wrappers/: index.html
dev-guide/containers-101/: index.html
dev-guide/containers-cheat-sheet/: index.html
dev-guide/dep-management/: index.html
dev-guide/doc-gen/: index.html
dev-guide/git/: index.html
dev-guide/intro/: index.html
dev-guide/kubernetes-local-kind/: index.html
dev-guide/licensing/: index.html
dev-guide/pre-commit/: index.html
dev-guide/testing/: index.html
dev-guide/version-control/: index.html
dev-guide/web-apis/: index.html
dev-guide/web-backend/: index.html
dev-guide/web-frameworks/: index.html
dev-guide/web-frontend/: index.html
dev-practices/: index.html
devops/aws-iam/: index.html
diagrams/: e2e-2-digitization.drawio  e2e-ecosystem.drawio  index.html
docs/: become-a-contributor.md  code-of-conduct.md  dev-practices.md  diagrams.md  e2e-overview.md  funding.json  modules.md  modules_backend.md  modules_frontend.md  other-tools.md  privacy-policy.md  roadmap.md  tech-contacts.md  tools-summary.md
docs-archive/techdoc/: ConceptualDiagramHowTo.odt  README.md  SolutionUserDiagramHowTo.odt
docs/.well-known/: funding-manifest-urls
e2e-overview/: index.html
javascripts/: mermaid-diagrams.js
modules/: index.html
other-tools/: index.html
privacy-policy/: index.html
roadmap/: index.html
search/: search_index.json
tech-contacts/: index.html
techdoc/: ComponentDiagramHowTo.odt  Makefile  index.html
tools-summary/: index.html
(+113 files in other folders)
