[project]
name = "docs"
dynamic = ["version"]
description = "Documentation index across HOT's tools."
authors = [
    {name = "Sam Woodcock", email = "sam.woodcock@hotosm.org"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["hot", "hotosm", "docs", "documentation", "humanitarian"]

[project.urls]
homepage = "https://hotosm.github.io/docs"
documentation = "https://hotosm.github.io/docs"
repository = "https://github.com/hotosm/docs"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.2",
]
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
version_files = [
    "pyproject.toml:version",
]
