[project]
name = "docs"
dynamic = ["version"]
description = "Documentation index across HOT's tools."
authors = [
    {name = "Sam Woodcock", email = "sam.woodcock@hotosm.org"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["hot", "hotosm", "docs", "documentation", "humanitarian"]

[project.urls]
homepage = "https://docs.hotosm.org"
documentation = "https://docs.hotosm.org"
repository = "https://github.com/hotosm/docs"

[project.optional-dependencies]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material==9.5.42",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mdx-truly-sane-lists>=1.3",
    "mkdocs-drawio>=1.7.0",
]
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.0"
version_files = [
    "pyproject.toml:version",
]

[tool.pdm]
